fix: layout issue

--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -5,11 +5,13 @@
   height: calc(100vh - 60px);
   position: sticky;
   top: 60px;
+  right: 10px;
   overflow-y: scroll;
   margin-top: 16px;
   background-color: #fff;
   border-radius: $border-radius-md;
-  float: right;
+  width: 300px;
+  min-width: 300px;
 }
 
 ::-webkit-scrollbar {
@@ -174,4 +176,10 @@
   width: 100px;
   height: 100px;
   border-radius: 6px;
+}
+
+@media only screen and (max-width: 600px) {
+  .rightbar {
+    display: none;
+  }
 }
